--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.12.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.0",
     "react-animated-numbers": "^0.18.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
-  },
+    "react-dom": "^18.3.0"
+  }
+,
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
